# Concatenator

./: .gitignore  MANIFEST.in  README.md  core.py  main.py  models.py  pyproject.toml  setup.py  ui_mainwindow.py
.github/workflows/: build-windows.yml  python-ci.yml  release-multi-os.yml
RoslynCleaner/: Program.cs
